<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/kv_key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hint_key"
        android:inputType="text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/kv_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_weight="1"
        android:hint="@string/hint_value"
        android:inputType="text"
        android:textSize="13sp" />

    <Button
        android:id="@+id/kv_delete"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:text="@string/row_delete"
        android:textColor="@color/warn"
        android:textSize="12sp" />
</LinearLayout>
